# PadReticle

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: crosshair.css  crosshair.html  crosshair.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
